5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1582_1559.log
== TEST (2019-04-13 21:21:29) 
-- CODE:
frase = "Ada Love lace foi a primeira programadora da história."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f749d651730>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:22:45) 
-- CODE:
frase = "Ada Love lace foi a primeira programadora da história."
print('=frase.upper')
-- OUTPUT:
=frase.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:14:55) 
-- CODE:
frase = "Ada Love lace foi a primeira programadora da história."
print('frase.upper')
-- OUTPUT:
frase.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:27:48) 
-- CODE:
frase = "Ada Love lace foi a primeira programadora da história."
print (.upper(frase))
-- ERROR:
File "XXXX", line 2
    print (.upper(frase))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:39:48) 
-- CODE:
string = "Ada Love lace foi a primeira programadora da história."
print (string.upper ())
-- OUTPUT:
ADA LOVE LACE FOI A PRIMEIRA PROGRAMADORA DA HISTÓRIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:47:28) 
-- CODE:
frase = "Ada Lovace foi a primeira programadora da história."
print (frase)
-- OUTPUT:
Ada Lovace foi a primeira programadora da história.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 10:47:59) 
-- CODE:
frase = "Ada Lovace foi a primeira programadora da história."
print ("frase")
-- OUTPUT:
frase
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:18:15) 
-- CODE:
frase = 'ada lovace foi a primeira programadora da história.'
print ('frase'.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f19966b75a8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:18:56) 
-- CODE:
frase = 'ada lovace foi a primeira programadora da história.'
print ('frase.upper')
-- OUTPUT:
frase.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:19:21) 
-- CODE:
frase = 'ada lovace foi a primeira programadora da história.'
print (frase)
-- OUTPUT:
ada lovace foi a primeira programadora da história.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:20:36) 
-- CODE:
print ("ada lovace foi a primeira programadora da história".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7fe2adac6730>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:21:22) 
-- CODE:
print ("ada lovace foi a primeira programadora da história")
-- OUTPUT:
ada lovace foi a primeira programadora da história
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:22:14) 
-- CODE:
print ("ada lovace foi a primeira programadora da historia")
-- OUTPUT:
ada lovace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:24:12) 
-- CODE:
print ("ada lovace foi a primeira programadora da historia".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f13483359f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:25:17) 
-- CODE:
print ("ada lovace foi a primeira programadora da historia.upper")
-- OUTPUT:
ada lovace foi a primeira programadora da historia.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:28:48) 
-- CODE:
str = "Ada Lovace foi a primeira programadora da historia."
str.upper ()
-- OUTPUT:
ada lovace foi a primeira programadora da historia.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:29:39) 
-- CODE:
str = "Ada Lovace foi a primeira programadora da historia."

print (str.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7ff78c6aa9f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:29:57) 
-- CODE:
str = "Ada Lovace foi a primeira programadora da historia."

print (str)
-- OUTPUT:
Ada Lovace foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:32:25) 
-- CODE:
str = "Ada Lovace foi a primeira programadora da historia."

print (str(.upper))
-- ERROR:
File "XXXX", line 3
    print (str(.upper))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:38:33) 
-- CODE:
ahnao = "Ada Lovace foi a primeira programadora da historia."

print (ahnao)
-- OUTPUT:
Ada Lovace foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:39:33) 
-- CODE:
ahnao = "Ada Lovace foi a primeira programadora da historia."

print (ahnao.upper())
-- OUTPUT:
ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:39:52) 
-- CODE:
ahnao = "Ada Lovace foi a primeira programadora da historia."

print (ahnao.upper())
-- EXECUTION TIME:
0.213084
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:40:02) 
-- CODE:
ahnao = "Ada Lovace foi a primeira programadora da historia."

print (ahnao.upper())
-- OUTPUT:
ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:40:43) 
-- CODE:
ahnao = "Ada Lovace foi a primeira programadora da historia."

print (ahnao.upper())
-- OUTPUT:
ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:44:30) 
-- CODE:
ahnao = "\"Ada Locação foi a primeirA programaDOra da história"\""

print (ahnao.upper())
-- ERROR:
File "XXXX", line 1
    ahnao = "\"Ada Locação foi a primeirA programaDOra da história"\""
                                                                      ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:44:46) 
-- CODE:
ahnao = "\"Ada Locação foi a primeirA programaDOra da história"\"

print (ahnao.upper())
-- ERROR:
File "XXXX", line 1
    ahnao = "\"Ada Locação foi a primeirA programaDOra da história"\"
                                                                     ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:45:10) 
-- CODE:
ahnao = "\"Ada LoVace foi a primeirA programaDOra da histOria"\"

print (ahnao.upper())
-- ERROR:
File "XXXX", line 1
    ahnao = "\"Ada LoVace foi a primeirA programaDOra da histOria"\"
                                                                   ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:49:14) 
-- CODE:
ahnao = "\Ada lovace foi a primeira programadora da historia\"."

print (ahnao.upper())
-- OUTPUT:
\ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA".
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:50:15) 
-- CODE:
ahnao = "\"Ada lovace foi a primeira programadora da historia\"."

print (ahnao.upper())
-- OUTPUT:
"ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA".
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:50:38) 
-- CODE:
ahnao = "\"Ada lovace foi a primeira programadora da historia.\"."

print (ahnao.upper())
-- OUTPUT:
"ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.".
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:51:03) 
-- CODE:
ahnao = "\"Ada lovace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:51:22) 
-- CODE:
ahnao = "\"Ada lovace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- EXECUTION TIME:
0.199642
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
"ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:51:29) 
-- CODE:
ahnao = "\"Ada lovace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:52:00) 
-- CODE:
ahnao = "\"Ada lovace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- EXECUTION TIME:
0.112359
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
"ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:07) 
-- CODE:
ahnao = "\"Ada lovace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:36) 
-- CODE:
ahnao = "\"Ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:52:51) 
-- CODE:
ahnao = "\"Ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- EXECUTION TIME:
0.182546
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:52:57) 
-- CODE:
ahnao = "\"Ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:53:52) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:54:17) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- EXECUTION TIME:
0.177717
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:54:22) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:01:32) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:02:17) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- EXECUTION TIME:
0.140558
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:02:24) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:27:35) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:46:57) 
-- CODE:
ahnao = "\"ada lovelace foi a primeira programadora da historia.\""

print (ahnao.upper())
-- OUTPUT:
"ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:47:42) 
-- CODE:
ahnao = "Ada lovelace foi a primeira programadora da historia."

print (ahnao.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:47:51) 
-- CODE:
ahnao = "Ada lovelace foi a primeira programadora da historia."

print (ahnao.upper())
-- EXECUTION TIME:
0.170843
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
